# projectives

./: README.md  pyproject.toml
organoids/commands/: analyze.py  export.py  ocr.py  prune.py  rank.py
projectives/: __main__.py
projectives/commands/: cifarx.py  export.py  ocr.py  prune.py  rank.py  segment.py
scripts/: barchart.py  boxplot.py  corr.py
